fix level 3 and level 3 question stage - barriers overlapping ui icons

--- a/RTZ/css/game.css
+++ b/RTZ/css/game.css
@@ -38,7 +38,7 @@
     text-align: center;
     top: 1%;
     /*left: 50%;*/
-    color: black;
+    color: white;
     font-size: 1.5em;
     z-index: 10;
 }
@@ -142,10 +142,6 @@
 .level_select_button:hover {
     /*background-color: white;*/
     background: linear-gradient(white, rgb(160, 160, 160));
-}
-
-#play_area {
-    background: url('../img/gamebg.png');
 }
 
 #food_image {
